--- a/app/views/investigations/pages/_tatemonosuijyunsokuryokekkahyo_photo_book_row.html.erb
+++ b/app/views/investigations/pages/_tatemonosuijyunsokuryokekkahyo_photo_book_row.html.erb
@@ -8,7 +8,7 @@
     <table class="table table-bordered">
       <% if point != nil %>
         <tr class="header"><td>P.<%= point.number %></td></tr>
-        <tr class="body">
+        <tr class="header">
           <td>
             <% if point.room_name == "その他" %>
               <%= point.room_name_other %>
@@ -28,6 +28,7 @@
 </tr>
 
 <style>
+/*
 .photo_book .photo img {
   width: auto;
   height: 330px;
@@ -51,11 +52,12 @@
   border-right: none !important;
   border-bottom: dotted !important;
 }
-/* セルの最小heightを設定 */
+// セルの最小heightを設定
 .photo_book .book table .body td:first-child:before {
   display: block;
   float: left;
   height: 12px;
   content: "";
 }
+*/
 </style>
