--- a/app/views/investigations/_form.html.erb
+++ b/app/views/investigations/_form.html.erb
@@ -41,7 +41,12 @@
       <div class="form-group">
         <%= f.label :place, '調査場所*' %>
         <%= f.text_field :place, :class=>"form-control", required: true %>
-      </div> 
+      </div>
+
+      <div class="form-group">
+        <%= f.label :status, 'ステータス*：' %>
+        <%= f.select :status, $INVESTIGATION_STATUS, :prompt => "選択してください", :required => true %>
+      </div>
 
       <div class="partial">
         <p class="text-center">事前調査</p>
